# rust-axum-service-sample

./: Cargo.toml  README.md  sample.service
migrations/: 1_create_todo.sql
src/: config.rs  error.rs  extractors.rs  handlers.rs  main.rs  model.rs  server.rs  use_cases.rs
src/todo_store/: inmemory.rs  mod.rs  sqlite.rs
